--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 ---
-title: Home
+title: TheCurriedBlog
 ---
+<p>Being a functional programming enthusiast, the name of the Blog seems apt. So is it just the name? Not exactly. I will aim that my blog posts build on each other to present something that will help someone.</p>
 
-<h2>Welcome</h2>
-
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
-
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
+<h2>Recent Posts</h2>
 $partial("templates/post-list.html")$
 
 <p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
